tests/build/cases/widget/new_fns_cannot_be_async.stderr
error: `new` cannot be `async`
 --> cases/widget/new_fns_cannot_be_async.rs:7:5
  |
7 |     async fn new(child: impl UiNode, id: impl IntoValue<WidgetId>) -> impl UiNode {
  |     ^^^^^

error: `new_child` cannot be `async`
  --> cases/widget/new_fns_cannot_be_async.rs:10:5
   |
10 |     async fn new_child() -> NilUiNode {
   |     ^^^^^

error[E0277]: the trait bound `impl Future<Output = NilUiNode>: UiNode` is not satisfied
  --> cases/widget/new_fns_cannot_be_async.rs:10:29
   |
10 |     async fn new_child() -> NilUiNode {
   |                             ^^^^^^^^^ the trait `UiNode` is not implemented for `impl Future<Output = NilUiNode>`

error[E0277]: the trait bound `impl Future<Output = Opaque(DefId(0:30 ~ $CRATE[1580]::test_widget::new::{opaque#0}::{opaque#0}), [impl zero_ui::core::UiNode, <id_type_must_match_property_definition_0 as zero_ui::widgets::blank::__p_id::Args>::T_id])>: UiNode` is not satisfied
 --> cases/widget/new_fns_cannot_be_async.rs:7:71
  |
7 |     async fn new(child: impl UiNode, id: impl IntoValue<WidgetId>) -> impl UiNode {
  |                                                                       ^^^^^^^^^^^ the trait `UiNode` is not implemented for `impl Future<Output = Opaque(DefId(0:30 ~ $CRATE[1580]::test_widget::new::{opaque#0}::{opaque#0}), [impl zero_ui::core::UiNode, <id_type_must_match_property_definition_0 as zero_ui::widgets::blank::__p_id::Args>::T_id])>`
